# gspell

./: CMakeLists.txt
res/shaders/: fSprite.txt  fragment.txt  vSprite.txt  vertex.txt
src/: main.cpp
src/game/: character.cpp  character.h  game.cpp  game.h
src/renderer/: animated_sprite.cpp  animated_sprite.h  shader_program.cpp  shader_program.h  sprite.cpp  sprite.h  texture2d.cpp  texture2d.h
src/resources/: resource_manager.cpp  resource_manager.h
